--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -12,7 +12,7 @@
 	<header>
 		<section class="hello_board">
 			<section class="head_pic_border"><img src="{{ site.imageurl }}/head.jpg"></section>
-			<article class="my_info">Nemo</article>
+			<article class="my_info">Caesor</article>
 			<nav class="big_nav">
 				<ul>
 					<li><a href="{{ site.baseurl }}/">Archive</a></li>
