--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -2,7 +2,7 @@
 layout: template
 ---
 <section class="blog_layout"">
-	<section class="content_part_left">	
+	<aritcle class="content_part_left">	
 		<section class="blog_info">
 			<ul class="pub_time"><i class="fa fa-calendar"></i><li>{{ page.date | date: '%y-%m-%d' }}</li></ul>
 			<ul class="blog_category">
@@ -47,8 +47,8 @@ layout: template
 		<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 		<a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
 		<!-- Disqus end -->
-	</section>
-	<aside class="content_part_right">
+	</aritcle>
+<!--	<aside class="content_part_right">
 		<h3>Tags List</h3>
 		<ul>
 			{% for tag in site.tags %}      
@@ -57,5 +57,5 @@ layout: template
 			</li>
 			{% endfor %}
 		</ul>
-	</aside>
+	</aside> -->
 </section>
