--- a/resource/css/pages.css
+++ b/resource/css/pages.css
@@ -9,9 +9,9 @@
 .blog_info{padding: 10px 0;color:#00438a;}
 .blog_info ul{display:inline-block;margin-right:20px;}
 .blog_info ul li{display:inline-block;padding-left:10px;}
-.blog_content h2{font-size:18px;font-weight:800;display: inline-block;background-color: #2295FF;color: #fff;padding: 0 20px;line-height:30px;margin: 5px 0;border-radius:14px 0;}
+.blog_content h2{font-size:20px;font-weight:800;color: #2576D0;padding: 5px 0;line-height:30px;margin: 5px 0;border-bottom: 1px solid #eee;}
 .blog_content p{margin: 10px 0;}
-.blog_content img{max-width:90%;}
+.blog_content img{max-width:90%;max-height: 350px;}
 .blog_content .pagination{display: inline-block;padding-left: 0;margin: 20px 0;border-radius: 4px;}
 .blog_content .pagination li{float: left;padding: 5px 10px;border: 1px solid #eee;}
 .blog_content .pagination li:hover{cursor: pointer;background: #fafafa;}
@@ -59,7 +59,7 @@
 	.post_title{margin: 10px 0 10px;}
 	.tag_list li{margin: 0 10px 10px 0;}
 	.tag_list li a{font-size:14px;padding: 0 8px;}
-	.blog_content h2{font-size:16px;padding: 0 15px;line-height:25px;}
+	.blog_content h2{font-size:16px;line-height:25px;}
 	
 	.blog_info ul{margin-right: 10px;}
 	.blog_info ul li{padding-left: 5px;}
