add head bar title

--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -20,6 +20,7 @@
 			</ul>
 		</nav>
 		<nav class="small_nav">
+			<h3>Caesor's Blog</h3>
 			<i id="menu-trigger" class="fa fa-bars" statu="0"></i>
 		</nav>
 	</header>
