--- a/resource/css/layout.css
+++ b/resource/css/layout.css
@@ -23,14 +23,8 @@ header .head_pic_border:hover{
 header .my_info{font-family: cursive;font-size:40px; color:#fff;margin:10px 0;}*/
 /* menu button */
 .small_nav{width:100%;position:fixed; top:0;text-align:right;display:none;z-index: 1000;background: #181818;}
+.small_nav h3{color: #fff;font-size: 18px; font-family: cursive;float: left;line-height: 45px;margin-left: 20px;font-weight: 100;}
 #menu-trigger{font-size: 28px;color: #fff;cursor: pointer;padding: 0 4px;margin:0 5px;line-height: 45px;}
-#menu-trigger:hover{
-	transform:rotate(0deg);
-	-webkit-transform:rotate(0deg);
-	-ms-transform:rotate(0deg);
-	-o-transform:rotate(0deg);
-	-moz-transform:rotate(0deg);
-}
 
 
 .wall{margin: 0 auto;color:#303030;overflow: hidden;}
@@ -60,5 +54,5 @@ footer{width: 100%;text-align:center;color:#858585;line-height:80px;}
 	header ul li.selected a{background: #2D2D2D;}
 	.small_nav{display:block;}
 	header .my_info{font-size:30px;}
-	.wall{width:95%;padding-top:40px;}
+	.wall{width:90%;padding-top:40px;}
 }
