--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -4,8 +4,9 @@
 	<title>{{ page.title }}</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-	<meta name="keywords" content="blog" />
+	<meta name="keywords" content="blog font-ent javascript css algorithm" />
 	<meta name="description" content="sharing something leared from my life" />
+	<meta name="author" content="nemo" />
 	<link type="text/css" rel="stylesheet" href="{{ site.baseurl }}/resource/base.css">
 </head>
 <body class="bg">
