--- a/resource/css/pages.css
+++ b/resource/css/pages.css
@@ -15,7 +15,7 @@
 .blog_info{padding: 10px 0;color:#AB794E;}
 .blog_info ul{display:inline-block;margin-right:20px;}
 .blog_info ul li{display:inline-block;padding-left:10px;}
-.blog_content h2{font-size:20px;font-weight:800;color: #48555C;padding: 5px 0;line-height:30px;margin: 5px 0;border-bottom: 1px solid #eee;}
+.blog_content h2{font-size:20px;font-weight:800;color: #4B91B6;padding: 5px 0;line-height:30px;margin: 5px 0;border-bottom: 1px solid #eee;}
 .blog_content h3{font-size: 16px;font-weight: 100;color: #5BA4BA;font-family: fantasy;padding: 2px 0;}
 .blog_content p{margin: 10px 0;}
 .blog_content img{max-width:90%;max-height: 350px;}
