--- a/resource/css/pages.css
+++ b/resource/css/pages.css
@@ -77,6 +77,7 @@
 	.tag_list li a{font-size:14px;padding: 0 8px;}
 	.blog_content{width: 100%;}
 	.blog_content h2{font-size:16px;line-height:25px;}
+	.blog_content h3{font-size: 14px;}
 	
 	.blog_info ul{margin-right: 10px;}
 	.blog_info ul li{padding-left: 5px;}
