--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -7,7 +7,11 @@
 	<meta name="keywords" content="blog font-ent javascript css algorithm" />
 	<meta name="description" content="sharing something leared from my life" />
 	<meta name="author" content="nemo" />
-	<link type="text/css" rel="stylesheet" href="{{ site.baseurl }}/resource/base.css">
+	<link type="text/css" rel="stylesheet" href="{{ site.baseurl }}/resource/font-awesome-4.2.0/css/font-awesome.min.css">
+	<link type="text/css" rel="stylesheet" href="{{ site.baseurl }}/resource/css/common.css">
+	<link type="text/css" rel="stylesheet" href="{{ site.baseurl }}/resource/css/layout.css">
+	<link type="text/css" rel="stylesheet" href="{{ site.baseurl }}/resource/css/pages.css">
+	<link type="text/css" rel="stylesheet" href="{{ site.baseurl }}/resource/google-code-prettify/prettify.css">
 </head>
 <body class="bg">
 	<header>
