--- a/resource/css/pages.css
+++ b/resource/css/pages.css
@@ -19,10 +19,11 @@
 .blog_content h3{font-size: 16px;font-weight: 100;color: #5BA4BA;font-family: fantasy;padding: 2px 0;}
 .blog_content p{margin: 10px 0;}
 .blog_content img{max-width:90%;max-height: 350px;}
+.blog_content strong{color:#E05E5E;}
 .blog_content .pagination{display: inline-block;padding-left: 0;margin: 20px 0;border-radius: 4px;}
 .blog_content .pagination li{float: left;padding: 5px 10px;border: 1px solid #eee;}
 .blog_content .pagination li:hover{cursor: pointer;background: #fafafa;}
-.blog_content .pagination li a{text-decoration: none;color:#E05E5E;}
+.blog_content .pagination li a{text-decoration: none;color:#C77496;}
 #blog_nav h3{text-align:center;}
 #blog_nav ul{margin:10px 0;padding-left: 20px;}
 #blog_nav li{overflow: hidden;text-overflow: ellipsis;white-space: nowrap;}
