--- a/resource/css/layout.css
+++ b/resource/css/layout.css
@@ -1,4 +1,4 @@
-.bg{background-color: #fff;position:relative;background-image: url(/resource/image/bg.png);}
+.bg{background-color: #f2f2f2;position:relative;background-image: url(/resource/image/bg.png);}
 header ul, .wall{max-width:880px;width:82%;}
 header{width: 100%; font-size: 14px;margin:0 auto;overflow: hidden;max-width: 900px;height: 300px;padding-top: 50px;}
 header .logo_text{font-family: 'chinese';line-height: 50px;font-size: 70px;position: relative;padding: 50px;}
@@ -27,7 +27,7 @@ header .my_info{font-family: cursive;font-size:40px; color:#fff;margin:10px 0;}*
 #menu-trigger{font-size: 28px;color: #fff;cursor: pointer;padding: 0 4px;margin:0 5px;line-height: 45px;}
 
 
-.wall{margin: 0 auto;color:#303030;overflow: hidden;}
+.wall{margin: 0 auto;color:#303030;background: #f2f2f2;overflow: hidden;}
 .wall a{color:#2A9ABB;}
 .wall a:hover{color:#00438a;}
 .post_list a{transition:all .3s ease-in;}
@@ -60,5 +60,5 @@ footer{width: 100%;text-align:center;color:#858585;line-height:80px;}
 	header ul li.selected a{background: #2D2D2D;}
 	.small_nav{display:block;}
 	header .my_info{font-size:30px;}
-	.wall{width:90%;padding-top:40px;}
+	.wall{width:90%;}
 }
