--- a/resource/css/pages.css
+++ b/resource/css/pages.css
@@ -7,16 +7,17 @@
 .article_list ul li{list-style-type:disc;overflow: hidden;text-overflow: ellipsis;white-space: nowrap;}
 
 /* blog */
+.blog_block{padding:40px;}
 .blog{display: block;}
 .special_box{overflow: hidden;}
 .blog_content{width:75%;float: left;position: relative;}
 #blog_nav{width:200px;float: right;max-width: 200px;}
-.blog_title{padding:20px 0;font-size: 28px;line-height: 30px;border-bottom: 1px solid #C8C8C8;}
+.blog_title{padding:20px 0;font-size: 30px;line-height: 30px;border-bottom: 1px solid #C8C8C8;}
 .blog_info{padding: 10px 0;color:#AB794E;}
 .blog_info ul{display:inline-block;margin-right:20px;}
 .blog_info ul li{display:inline-block;padding-left:10px;}
-.blog_content h2{font-size:20px;font-weight:800;color: #4B91B6;padding: 5px 0;line-height:30px;margin: 5px 0;border-bottom: 1px solid #eee;}
-.blog_content h3{font-size: 16px;font-weight: 100;color: #5BA4BA;font-family: fantasy;padding: 2px 0;}
+.blog_content h2{font-size:22px;font-weight:800;color: #4B91B6;padding: 5px 0;line-height:30px;margin: 5px 0;border-bottom: 1px solid #eee;}
+.blog_content h3{font-size: 18px;color: #5BA4BA;font-family: fantasy;padding: 2px 0;}
 .blog_content p{margin: 10px 0;}
 .blog_content img{max-width:90%;max-height: 350px;}
 .blog_content strong{color:#E05E5E;}
@@ -73,6 +74,7 @@
 	.resume_part ul{margin-left: 15px;}
 	.post_title{margin: 10px 0 10px;}
 
+	.blog_block{padding:20px;}
 	.blog_title{font-size: 20px;padding: 20px 0;}
 	.tag_list li{margin: 0 10px 10px 0;}
 	.tag_list li a{font-size:14px;padding: 0 8px;}
