--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -33,7 +33,7 @@
 		{{ content }}
 	</section>
 	<footer>
-		<p>© Nemo 2014 with help of Jekyll</p>
+		<p>© Nemo 2014-2015 with help of Jekyll</p>
 	</footer>
 
 	<!-- scroll top botton -->
