--- a/resource/css/pages.css
+++ b/resource/css/pages.css
@@ -7,7 +7,7 @@
 .article_list ul li{list-style-type:disc;overflow: hidden;text-overflow: ellipsis;white-space: nowrap;}
 
 /* blog */
-.blog_block{padding:40px;}
+.blog_block{padding:40px;background: #f2f2f2;}
 .blog{display: block;}
 .special_box{overflow: hidden;}
 .blog_content{width:75%;float: left;position: relative;}
