--- a/resource/css/pages.css
+++ b/resource/css/pages.css
@@ -2,7 +2,7 @@
 .displayNone{display:none;}
 
 /* blog list */
-.article_list{width: 800px;margin: 0 auto; font-size: 10px;}
+.article_list{width: 800px;margin: 0 auto;}
 .article_list ul{margin-left: 35px;}
 .article_list ul li{list-style-type:disc;overflow: hidden;text-overflow: ellipsis;white-space: nowrap;}
 
@@ -70,6 +70,7 @@
 .resume_part .marked{color: #E05E5E;}
 
 @media screen and (max-width: 800px){
+	.article_list{font-size: 8px;}
 	.article_list ul{margin-left: 0;}
 	.resume_part ul{margin-left: 15px;}
 	.post_title{margin: 10px 0 10px;}
