--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
+	<!-- 优先使用Google Chrome Frame 渲染 -->
+	<meta name="renderer" content="webkit">
+	<meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
+	<!-- 禁止转码 -->
+	<meta http-equiv="Cache-Control" content="no-siteapp" />
 	<title>{{ page.title }}</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+	<!-- SEO -->
 	<meta name="keywords" content="blog font-ent javascript css algorithm" />
 	<meta name="description" content="sharing something leared from my life" />
-	<meta name="author" content="nemo" />
+	<meta name="author" content="nemo,liaozksysu@gmail.com" />
+	<!-- 定义网页搜索引擎索引方式 -->
+	<meta name="robots" content="index,follow">
+	<!-- mobile -->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+	<meta name="apple-mobile-web-app-capable" content="yes" />
+	<meta name="viewport" content="width=375">
+	<meta name="viewport" content="width=414">
+	<!-- css -->
 	<link type="text/css" rel="stylesheet" href="{{ site.baseurl }}/resource/font-awesome-4.2.0/css/font-awesome.min.css">
 	<link type="text/css" rel="stylesheet" href="{{ site.baseurl }}/resource/css/common.css">
 	<link type="text/css" rel="stylesheet" href="{{ site.baseurl }}/resource/css/layout.css">
