upgrade google seo

--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -7,11 +7,11 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
 	<!-- 禁止转码 -->
 	<meta http-equiv="Cache-Control" content="no-siteapp" />
-	<title>{{ page.title }}</title>
+	<title>水墨中国</title>
 	<!-- SEO -->
-	<meta name="keywords" content="blog font-ent javascript css algorithm" />
+	<meta name="keywords" content="水墨中国 blog font-ent javascript css algorithm" />
 	<meta name="description" content="sharing something leared from my life" />
-	<meta name="author" content="nemo,liaozksysu@gmail.com" />
+	<meta name="author" content="caesor,nemoliao,liaozksysu@gmail.com" />
 	<!-- 定义网页搜索引擎索引方式 -->
 	<meta name="robots" content="index,follow">
 	<!-- mobile -->
