--- a/resource/css/pages.css
+++ b/resource/css/pages.css
@@ -19,8 +19,10 @@
 .blog_content h2{font-size:22px;font-weight:800;color: #4B91B6;padding: 5px 0;line-height:30px;margin: 5px 0;border-bottom: 1px solid #eee;}
 .blog_content h3{font-size: 18px;color: #5BA4BA;font-family: fantasy;padding: 2px 0;}
 .blog_content p{margin: 10px 0;}
+.blog_content li{list-style-type: disc; margin-left: 24px;}
 .blog_content img{max-width:90%;max-height: 350px;}
 .blog_content strong{color:#E05E5E;}
+.blog_content code{color: #3C6C8E;}
 .blog_content .pagination{display: inline-block;padding-left: 0;margin: 20px 0;border-radius: 4px;}
 .blog_content .pagination li{float: left;padding: 5px 10px;border: 1px solid #eee;}
 .blog_content .pagination li:hover{cursor: pointer;background: #fafafa;}
