--- a/resource/css/pages.css
+++ b/resource/css/pages.css
@@ -22,7 +22,7 @@
 .blog_content li{list-style-type: disc; margin-left: 24px;}
 .blog_content img{max-width:90%;max-height: 350px;}
 .blog_content strong{color:#E05E5E;}
-.blog_content code{color: #3C6C8E;}
+.blog_content p>code{color: #3C6C8E;}
 .blog_content .pagination{display: inline-block;padding-left: 0;margin: 20px 0;border-radius: 4px;}
 .blog_content .pagination li{float: left;padding: 5px 10px;border: 1px solid #eee;}
 .blog_content .pagination li:hover{cursor: pointer;background: #fafafa;}
