--- a/resource/css/pages.css
+++ b/resource/css/pages.css
@@ -24,7 +24,7 @@
 .blog_content strong{color:#E05E5E;}
 .blog_content p>code{color: #3C6C8E;}
 .blog_content .pagination{display: inline-block;padding-left: 0;margin: 20px 0;border-radius: 4px;}
-.blog_content .pagination li{float: left;padding: 5px 10px;border: 1px solid #eee;}
+.blog_content .pagination li{float: left;padding: 5px 10px;border: 1px solid #eee;list-style-type: none; margin-left: 0;}
 .blog_content .pagination li:hover{cursor: pointer;background: #fafafa;}
 .blog_content .pagination li a{text-decoration: none;color:#C77496;}
 #blog_nav h3{text-align:center;}
